--- a/src/my_cpp_pkg/CMakeLists.txt
+++ b/src/my_cpp_pkg/CMakeLists.txt
@@ -40,6 +40,9 @@ ament_target_dependencies(camera_pub OpenCV rclcpp sensor_msgs) # OpenCV is the 
 add_executable(camera_pub2 src/camera_pub2.cpp)
 ament_target_dependencies(camera_pub2 OpenCV rclcpp cv_bridge image_transport sensor_msgs)
 
+add_executable(camera_sub src/camera_sub.cpp)
+ament_target_dependencies(camera_sub OpenCV rclcpp cv_bridge image_transport sensor_msgs)
+
 # camera_pub 3 is the name of the executable
 
 add_executable(camera_pub3 src/camera_pub3.cpp)
@@ -51,6 +54,7 @@ install(TARGETS
   camera_pub2
   camera_pub
   camera_pub3
+  camera_sub
   
   DESTINATION lib/${PROJECT_NAME}
 )
